5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4130/executions/1638_651.log
== TEST (2019-04-11 11:17:47) 
-- CODE:
n = float(input("Insira a altura: "))
s = input("Insira o sexo (M / F): ")

m = (72.7 * a) - 58
f = (62.1 * a) - 44.7

if(s.upper() == "F")
	print(round(f, 2))
else:
	print(round(m, 2))
-- ERROR:
File "XXXX", line 7
    if(s.upper() == "F")
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:18:08) 
-- CODE:
n = float(input("Insira a altura: "))
s = input("Insira o sexo (M / F): ")

m = (72.7 * a) - 58
f = (62.1 * a) - 44.7

if(s.upper() == "F")
	print(round(f, 2))
else:
	print(round(m, 2))
-- ERROR:
File "XXXX", line 7
    if(s.upper() == "F")
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:18:20) 
-- CODE:
n = float(input("Insira a altura: "))
s = input("Insira o sexo (M / F): ")

m = (72.7 * a) - 58
f = (62.1 * a) - 44.7

if(s.upper() == "F"):
	print(round(f, 2))
else:
	print(round(m, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    m = (72.7 * a) - 58
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:18:48) 
-- CODE:
n = float(input("Insira a altura: "))
s = input("Insira o sexo (M / F): ")

m = (72.7 * a) - 58
f = (62.1 * a) - 44.7

if(s.upper() == "F"):
	print(round(f, 2))
else:
	print(round(m, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    m = (72.7 * a) - 58
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:19:28) 
-- CODE:
a = float(input("Insira a altura: "))
s = input("Insira o sexo (M / F): ")

m = (72.7 * a) - 58
f = (62.1 * a) - 44.7

if(s.upper() == "F"):
	print(round(f, 2))
else:
	print(round(m, 2))
-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:19:33) 
-- CODE:
a = float(input("Insira a altura: "))
s = input("Insira o sexo (M / F): ")

m = (72.7 * a) - 58
f = (62.1 * a) - 44.7

if(s.upper() == "F"):
	print(round(f, 2))
else:
	print(round(m, 2))
-- EXECUTION TIME:
0.139795
-- TEST CASE 1:
---- input:
1.0
F
---- correct output:
17.4
---- user output:
17.4
-- TEST CASE 2:
---- input:
1.234
M
---- correct output:
31.71
---- user output:
31.71
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
